<resources>
    <string name="app_name">QuicklyTaxi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menuHelp">Help</string>
    <string name="avTravels">Available Travels</string>
    <string name="myTravels">My Travels</string>
    <string name="exit">Exit</string>
    <string name="appName">QuicklyTaxi</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->

    <string name="login_signIn">Sign in</string>
    <string name="login_register">Register</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="register_text">Don\'t have an account?</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="lastName">Last Name:</string>
    <string name="firstName">First Name:</string>
    <string name="id">Id:</string>
    <string name="telephone">Telephone:</string>
    <string name="email">Email:</string>
    <string name="card">Credit card:</string>
    <string name="userHint">Enter your username</string>
    <string name="passwordHint">Enter your password</string>
    <string name="lastNameHint">Enter your last name</string>
    <string name="firstNameHint">Enter your first name</string>
    <string name="idHint">Enter your id</string>
    <string name="telephoneHint">Enter your telephone</string>
    <string name="emailHint">Enter your email</string>
    <string name="cardHint">Enter your credit card</string>
    <string name="registerOk">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NoValuesInList">No travels</string>
</resources>
