<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".control.RegisterActivity">

    <LinearLayout
        android:id="@+id/RegisterText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/regsiterUsername"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/username" />

        <TextView
            android:id="@+id/regsiterPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/password" />

        <TextView
            android:id="@+id/registerLastname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/lastName" />

        <TextView
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/firstName" />

        <TextView
            android:id="@+id/registerId"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/id" />

        <TextView
            android:id="@+id/registerTelphone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/telephone" />

        <TextView
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/email" />

        <TextView
            android:id="@+id/registerCard"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:text="@string/card" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RegisterEdit"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userHint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/LastNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/lastNameHint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/FirstNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/firstNameHint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/IdEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/idHint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/TelephoneEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/telephoneHint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/EmailEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/emailHint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/CardEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cardHint"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <Button
            android:id="@+id/register_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/registerOk"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>